--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,31 +20,88 @@ code {
   grid-template-columns: auto auto auto;
   */
   margin: auto;
-  max-width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
+  max-width: 750px;
+  /*display: flex;
+  flex-wrap: wrap;*/
   padding: 20px;
 }
 
 .coin {
   background-color: white;
-  text-align: center;
-  max-width: 250px;
+  /*text-align: center;*/
+  max-width: 1000px;
   border-radius: 50px;
   /*border: 1px solid grey;*/
-  align-content: center;
-  align-items: center;
   margin: 25px auto;
+  font-size: small;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .coin * {
+  /*display: inline;*/
   margin: auto;
+  /*vertical-align: middle;*/
+  /*float:left;*/
 }
 
+.coin .icon {
+  margin-left: 0;
+}
+
+.coin .profile-container {
+  /*display: flex;
+  flex-direction: column;*/
+  margin-left: 0;
+  text-align: center;
+}
+
+.coin .symbol {
+  color: #696969;
+  margin-left: 0;
+}
+
+/*
 .coin h1 {
   border-bottom: 1px solid rgb(184, 184, 184);
-}
+}*/
 
 .coin button {
   border: none;
+}
+
+td, th {
+  border-bottom: 1px solid rgb(190, 190, 190);
+  padding: 10px;
+}
+
+td {
+  text-align: center;
+}
+
+tr:nth-child(even) {
+  background-color: #eee;
+}
+
+th[scope="col"] {
+  background-color: #696969;
+  color: #fff;
+}
+
+th[scope="row"] {
+  background-color: #d7d9f2;
+}
+
+caption {
+  padding: 10px;
+  caption-side: bottom;
+}
+
+table {
+  border-collapse: collapse;
+  /*border: 2px solid rgb(200, 200, 200);*/
+  letter-spacing: 1px;
+  font-family: sans-serif;
+  font-size: .8rem;
 }
