--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,25 +13,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.change-positive {
+  color: green;
+}
+
+.change-negative {
+  color: red
+}
+
 .coins-container {
-  /*
-  display: grid;
-  grid-gap: 50px;
-  grid-template-columns: auto auto auto;
-  */
   margin: auto;
   max-width: 750px;
-  /*display: flex;
-  flex-wrap: wrap;*/
   padding: 20px;
 }
 
 .coin {
   background-color: white;
-  /*text-align: center;*/
   max-width: 1000px;
   border-radius: 50px;
-  /*border: 1px solid grey;*/
   margin: 25px auto;
   font-size: small;
   align-items: center;
@@ -40,10 +39,7 @@ code {
 }
 
 .coin * {
-  /*display: inline;*/
   margin: auto;
-  /*vertical-align: middle;*/
-  /*float:left;*/
 }
 
 .coin .icon {
@@ -51,8 +47,6 @@ code {
 }
 
 .coin .profile-container {
-  /*display: flex;
-  flex-direction: column;*/
   margin-left: 0;
   text-align: center;
 }
@@ -61,11 +55,6 @@ code {
   color: #696969;
   margin-left: 0;
 }
-
-/*
-.coin h1 {
-  border-bottom: 1px solid rgb(184, 184, 184);
-}*/
 
 .coin button {
   border: none;
