--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,7 +52,7 @@ code {
 }
 
 .coin .symbol {
-  color: #696969;
+  color: #777474;
   margin-left: 0;
 }
 
@@ -69,18 +69,10 @@ td {
   text-align: center;
 }
 
+/*
 tr:nth-child(even) {
-  background-color: #eee;
 }
-
-th[scope="col"] {
-  background-color: #696969;
-  color: #fff;
-}
-
-th[scope="row"] {
-  background-color: #d7d9f2;
-}
+*/
 
 caption {
   padding: 10px;
@@ -93,4 +85,24 @@ table {
   letter-spacing: 1px;
   font-family: sans-serif;
   font-size: .8rem;
+}
+
+.drop-down * {
+  visibility: hidden;
+}
+
+.drop-down:active {
+  visibility: visible;
+}
+
+.sort-indicator {
+  color: blue;
+}
+
+.descending::after {
+  content: " ▼";
+}
+
+.ascending::after {
+  content: " ▲";
 }
