--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,6 @@
-
-
 html {
-  --main-bg-color: rgb(248, 248, 248); /*rgb(248, 248, 248);*/
-
+  --main-bg-color: rgb(248, 248, 248);
+  /*rgb(248, 248, 248);*/
   background-color: var(--main-bg-color);
   /*background-color: rgb(254, 254, 254);*/
 }
@@ -13,32 +11,72 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+.loader {
+  align-self: center;
+  margin: auto;
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
 }
 
-.change-positive {
-  color: green;
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.change-negative {
-  color: red
+.sort-widget {
+  align-self: center;
+  text-align: center;
+  margin: auto;
+  background-color: white;
+  border: solid black 1px;
+  border-radius: 25px;
+  max-width: 250px;
 }
 
 .coins-container {
+  align-self: center;
   margin: auto;
-  max-width: 750px;
- /* padding: 20px;*/
+}
+
+table {
+  margin: auto;
+  border-collapse: collapse;
+  border-radius: 15px;
+  background-color: white;
+}
+
+/*
+td:last-child, th:last-child {
+  justify-content: flex-end;
+  display: flex;
+}*/
+
+td, th {
+  border-bottom: 4px solid var(--main-bg-color);
+  padding: 3px;
+  text-align: left;
+  padding: 2vw;
 }
 
 .coin .icon {
-  align-self: center; /* Fixes stretching since default self-align = stretch*/
+  align-self: center;
+  /* Fixes stretching since default self-align = stretch*/
 }
 
 .coin .profile-container {
- /* margin: auto;*/
+  /* margin: auto;*/
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;*/
 }
 
 .coin .name-symbol-container {
@@ -51,42 +89,15 @@ code {
   text-align: left;
 }
 
-
 .coin .name {
-  display: table-caption; /* Fixes long horizontal text */
+  display: table-caption;
+  /* Fixes long horizontal text */
 }
-
 
 .coin .symbol {
   margin-top: 2px;
   color: rgb(179, 179, 179);
 }
-
-table {
-  border-collapse:collapse;
-  border-radius: 15px;
-  background-color: white;
-}
-
-td, th {
-  border-bottom: 4px solid var(--main-bg-color);
-  padding: 30px;
-  text-align: left;
-}
-
-th{
-}
-
-tr {
-  /*
-  padding-top: 0px;
-  padding-bottom: 0px;*/
-}
-
-/*
-tr:nth-child(even) {
-}
-*/
 
 caption {
   padding: 10px;
@@ -107,4 +118,31 @@ caption {
 
 .ascending::after {
   content: " ▲";
+}
+
+.change-positive {
+  color: green;
+}
+
+.change-negative {
+  color: red
+}
+
+@media only screen and (max-width: 425px) {
+  * {
+    font-size:small;
+  }
+  body {
+    background-color: rgb(255, 0, 0);
+  }
+  table * {
+    padding: 0px;
+  }
+  .icon {
+    width: 32px;
+  }
+  /*
+  .profile-container {
+    flex-direction: column;
+  }*/
 }
